// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mosaic> Snapshots and structure should render story ClickableThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape2.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape3.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="portrait1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story FourThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape2.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape3.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="portrait1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story OneThumbnail 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-1-thumbnail"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story SixThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape2.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape3.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="portrait1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        tabIndex="0"
        theme="light"
        variant="squared"
      />
      <div
        className="lumx-mosaic__overlay"
      >
        <span>
          +
          2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story ThreeThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-3-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape2.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape3.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story TwoThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-2-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape1.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        aspectRatio="free"
        crossOrigin="anonymous"
        fallback="M21,5V11.59L18,8.58L14,12.59L10,8.59L6,12.59L3,9.58V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5M18,11.42L21,14.43V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V12.42L6,15.41L10,11.41L14,15.41"
        fillHeight={true}
        focusPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        image="landscape2.jpg"
        isCrossOriginEnabled={true}
        isFollowingWindowSize={true}
        loading="lazy"
        onClick={[Function]}
        resizeDebounceTime={20}
        theme="light"
        variant="squared"
      />
    </div>
  </div>
</div>
`;
